# opengl_learn

./: CMakeLists.txt  main.cpp
exercises/: exercies.h  exercise.h  exercise1.cpp  exercise10.cpp  exercise11.cpp  exercise12.cpp  exercise13.cpp  exercise14.cpp  exercise15.cpp  exercise16.cpp  exercise17.cpp  exercise18.cpp  exercise19.cpp  exercise2.cpp  exercise20.cpp  exercise21.cpp  exercise22.cpp  exercise3.cpp  exercise4.cpp  exercise5.cpp  exercise6.cpp  exercise7.cpp  exercise8.cpp  exercise9.cpp
res/material/: material.csv
res/shader/: basic_fragment.shader  basic_fragment2.shader  e2_vertex.shader  e3_fragment.shader  e3_vertex.shader  e4_vertex.shader  e5_vertex.shader
res/shader/advanced/: e13_fragment.shader  e14_fragment.shader
res/shader/advanced/e15/: e15_fragment.shader  e15_vertex.shader
res/shader/advanced/e16/: e16_fragment.shader
res/shader/advanced/e17/: e17_fragment_red.shader  e17_fragment_yellow.shader
res/shader/advanced/e18/: e18_fragment_blue.shader  e18_fragment_green.shader  e18_fragment_nanosuit.shader  e18_fragment_normal.shader  e18_fragment_red.shader  e18_fragment_yellow.shader  e18_geometry.shader  e18_geometry_nanosuit.shader  e18_vertex.shader  e18_vertex_geo.shader  e18_vertex_nanosuit.shader
res/shader/advanced/e19/: e19_fragment_planet.shader  e19_vertex_rock.shader
res/shader/advanced/e20/: e20_fragment.shader  (+1 more)
utils/: cube.cpp  cube.h  material_parse.cpp  material_parse.h  mesh.cpp  mesh.h  model.cpp  model.h  quad.cpp  quad.h  shader_parse.cpp  shader_parse.h  texture_parse.cpp  texture_parse.h
(+19 files in other folders)
